crates/ars-components/src/specialized/color_swatch/snapshots/ars_components__specialized__color_swatch__tests__color_swatch_inner_translucent.snap
---
source: crates/ars-components/src/specialized/color_swatch/mod.rs
expression: snapshot_attrs(&api(&props).inner_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-alpha",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "inner",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-swatch",
            ),
        ),
    ],
    styles: [
        (
            Background,
            "hsla(210, 80.0%, 50.0%, 0.40)",
        ),
    ],
}
